update .gitignore file and readme file

--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,7 @@ Temporary Items
 .apdisk
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,jupyternotebooks,images
+
+*.key
+
+Presentation_Mastermind-project.key
